# DIA_QC_report

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  build_docker  pyproject.toml  requirements.txt
.github/workflows/: docker-unittest.yml  unittest.yml
docker/: Dockerfile  build.py
python/: bar_chart.py  compare_db.py  generate_batch_rmd.py  generate_qc_qmd.py  histogram.py  make_gene_matrix.py  make_qmd.py  normalize_db.py  parse_data.py  pca_plot.py  std_peptide_rt_plot.py
qmd/: hu_csf.qmd  pdc_000414.qmd
rmd/: batch_correction_report.rmd  variable_bc_report.rmd
src/: __init__.py  export_gene_matrix.py  export_tables.py  filter_replicates.py  generate_batch_rmd.py  generate_qc_qmd.py  impute_missing.py  main.py  make_gene_matrix.py  metadata_convert.py  metadata_to_sky_annotations.py  normalize_db.py  parse_data.py  skyline_report_convert.py  tsv_to_skyline_annotation_csv.py  validate_pipeline_params.py
src/submodules/: __init__.py  bar_chart.py  dia_db_utils.py  dtype.py  histogram.py  imputation.py  logger.py  metadata.py  nextflow_pipeline_config.py  normalization.py  panorama.py  pca_plot.py  pipeline_config.py  read_metadata.py  skyline_reports.py  std_peptide_rt_plot.py  transformation.py
src/submodules/metadata/: __init__.py  dtype.py  read.py
tests/: run_parallel_tests.py  setup_functions.py  test_bitmask_parsing.py  test_check_duplicate_precursors.py  test_custom_assertions.py  test_db_utils_functions.py  test_dtype.py  test_export_gene_matrix.py  test_export_tables.py  test_filter_replicates.py  test_generate_batch_rmd.py  test_generate_qc_qmd.py  test_imputation_functions.py  test_impute_missing.py  test_list_panorama_files.py  test_main.py  test_make_gene_matrix.py  test_metadata_convert.py  test_metadata_parsing.py  test_metadata_to_sky_annotations.py  test_normalization_functions.py  test_normalize_db.py  test_normalize_var_names.py  test_panorama_functions.py  test_parse_data.py  test_parse_nextflow_pipeline_config.py  test_pca_ploting_functions.py  test_pipeline_config.py  test_read_metadata.py  test_report_convert.py  test_skyline_report_functions.py  test_transformation_functions.py  test_tsv_to_skyline_annotation_csv.py  test_validate_params.py  test_validate_params_functions.py  test_validate_pipeline_params.py  test_validate_pipeline_params_functions.py
tests/data/: Sp3_annotations.csv  Sp3_replicate_quality.tsv  Strap_annotations.csv  Strap_by_protein_precursor_quality.tsv
tests/data/intermediate_files/: Strap_precursors_df.tsv  Strap_replicates_df.tsv  multi_project_DirectLFQ_protein_df.tsv  multi_project_ion_df.tsv  multi_project_median_protein_df.tsv
tests/data/invalid_reports/: Sp3_by_protein_duplicate_precursor_quality.tsv  Sp3_by_protein_invalid_no_user_set_precursor_quality.tsv  Sp3_by_protein_invalid_other_diff_precursor_quality.tsv  Sp3_by_protein_precursor_quality_modified_Replicate.tsv  Sp3_by_protein_single_replicate_precursor_quality.tsv  (+5 more)
(+52 files in other folders)
