[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = 'DIA_QC_report'
version='1.16'
authors=[{name='Aaron Maurais', email='maurais@uw.edu'}]
dependencies = [
    'matplotlib>=0.1.6',
    'scikit-learn>=1.3.2',
    'numpy>=1.26.2',
    'pandas>=2.1.4',
    'dask[dataframe]>=2024.4.2',
    'jsonschema>=3.2.0',
    'directlfq @ git+https://github.com/ajmaurais/directlfq.git'
]
requires-python = '>=3.8'

[tool.setuptools]
packages = ['DIA_QC_report', 'DIA_QC_report.submodules']
package-dir = {'DIA_QC_report' = 'src'}

[project.scripts]
dia_qc = 'DIA_QC_report.main:main'
