[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = 'DIA_QC_report'
authors=[{name='Aaron Maurais', email='maurais@uw.edu'}]
description = 'Tools to generate QC and batch reports from DIA proteomics data.'
readme = 'README.md'
dynamic=['version']
dependencies = [
    'matplotlib>=0.1.6',
    'plotly>=5.24.1',
    'scikit-learn>=1.3.2',
    'numpy>=1.26.2',
    'pandas>=2.2',
    'dask[dataframe]>=2024.4.2',
    'jsonschema>=3.2.0',
    'directlfq @ git+https://github.com/ajmaurais/directlfq.git'
]
requires-python = '>=3.12'

[tool.setuptools]
packages = ['DIA_QC_report', 'DIA_QC_report.submodules']
package-dir = {'DIA_QC_report' = 'src'}

[tools.setuptools.dynamic]
version = { attr = 'DIA_QC_report.__version__' }

[project.scripts]
parse_data = 'DIA_QC_report.parse_data:main'
generate_batch_rmd = 'DIA_QC_report.generate_batch_rmd:main'
generate_qc_qmd = 'DIA_QC_report.generate_qc_qmd:main'
export_gene_matrix = 'DIA_QC_report.export_gene_matrix:main'
normalize_db = 'DIA_QC_report.normalize_db:main'
metadata_convert = 'DIA_QC_report.metadata_convert:main'
export_tables = 'DIA_QC_report.export_tables:main'
dia_qc = 'DIA_QC_report.main:main'
